--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 
-spring.output.ansi.enabled=always
+spring.datasource.url=jdbc:h2:file:./target/test
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.h2.Driver
+mybatis.config_location=classpath:db/migration/mybatis/config.xml
